syntax="proto3";

package greeting;


// The request message containing the required parameters.
message HelloWorldRequest {
 int32 num = 1;
 string name = 2;
}

// The response message containing the required parameters.
message HelloWorldReply {
  string retName = 1;
  int32  retval = 2;
}

// The request message containing the required parameters.
message FibbonaciRequest {
 int32 num = 1;
}

// The response message containing the required parameters.
message FibbonaciReply {
 string ret = 1;
}
